--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 [dependencies]
 arc-swap = "1.7.1"
 crc = "3.2.1"
+memmap2 = "0.9.5"
 memoffset = "0.9.1"
-mmap-rs = "0.6.1"
 rand = "0.9.1"
 thiserror = "2.0.12"
 
