--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 arc-swap = "1.7.1"
+crossbeam-epoch = "0.9.18"
 memmap2 = "0.9.5"
+memoffset = "0.9.1"
 rand = "0.9.1"
 thiserror = "2.0.12"
 
