--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "byodb-rust"
 version = "0.1.0"
 edition = "2024"
+description = "Build Your Own Database in Rust!"
+repository = "https://github.com/five-vee/byodb-rust"
+license = "MIT"
+include = [
+  "**/*.rs",
+  "LICENSE"
+]
 
 [dependencies]
 arc-swap = "1.7.1"
